--- a/Endeavor-i3-config/config
+++ b/Endeavor-i3-config/config
@@ -109,7 +109,7 @@ bindsym $mod+mod1+h split h
 bindsym $mod+mod1+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod++mod1+f fullscreen toggle
+bindsym $mod+mod1+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+Shift+s layout stacking
