--- a/Arch i3 config/config
+++ b/Arch i3 config/config
@@ -117,6 +117,9 @@ exec xscreensaver -nosplash
 # discord 
 exec discord --start-minimized
 
+# unclutter
+exec unclutter &
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
