--- a/Endeavor i3 config/config
+++ b/Endeavor i3 config/config
@@ -135,6 +135,8 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+## Autostart Appications
+
 # networkmanager-applet
 exec --no-startup-id nm-applet
 
@@ -146,6 +148,9 @@ exec albert
 
 # redshift
 exec redshift-gtk
+
+# unclutter
+exec unclutter &
 
 #set powersavings for display:
 exec --no-startup-id xset s 480 dpms 600 600 600
@@ -318,4 +323,4 @@ bindsym $mod+r exec rofi -show run   -lines 7
 bindsym $mod1+Tab exec rofi -show window -lines 7
 
 # Lock the system
-#bindsym $mod+l exec i3lock -i ~/.config/i3/i3-lock-screen.png -t -f  
+#bindsym $mod+l exec i3lock -i ~/.config/i3/i3-lock-screen.png -t -f    
