--- a/Arch i3 config/config
+++ b/Arch i3 config/config
@@ -150,10 +150,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+mod1+h split h
+bindsym $mod1+h split h
 
 # split in vertical orientation
-bindsym $mod+mod1+v split v
+bindsym $mod1+v split v
 
 # enter fullscreen mode for the focused container
 #bindsym $mod+f fullscreen toggle
