--- a/Endeavor i3 config/config
+++ b/Endeavor i3 config/config
@@ -113,10 +113,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+mod1+h split h
+bindsym $mod1+h split h
 
 # split in vertical orientation
-bindsym $mod+mod1+v split v
+bindsym $mod1+v split v
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+Shift+s layout stacking
