--- a/Arch i3 config/config
+++ b/Arch i3 config/config
@@ -11,6 +11,7 @@
 
 set $mod Mod4
 set $mod1 Mod1
+set $ctrl Ctrl
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -211,6 +212,14 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
+
+# move to next or previous workspace
+bindsym $ctrl+mod1+h workspace prev
+bindsym $ctrl+mod1+l workspace next
+
+# alternatively, you can use the cursor keys:
+bindsym $ctrl+mod1+Left workspace prev
+bindsym $ctrl+mod1+Right workspace next
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
