--- a/Arch i3 config/config
+++ b/Arch i3 config/config
@@ -212,7 +212,7 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# move to next or previous workspace
+# move to the next or previous workspace
 bindsym $mod+Ctrl+h workspace prev
 bindsym $mod+Ctrl+l workspace next
 
