--- a/Endeavor i3 config/config
+++ b/Endeavor i3 config/config
@@ -206,6 +206,14 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+# move to the next or previous workspace
+bindsym $mod+Ctrl+h workspace prev
+bindsym $mod+Ctrl+l workspace next
+
+# alternatively, you can use the cursor keys:
+bindsym $mod+Ctrl+Left workspace prev
+bindsym $mod+Ctrl+Right workspace next
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 
