--- a/Debian i3 config/config
+++ b/Debian i3 config/config
@@ -271,8 +271,11 @@ bindsym $mod+Shift+q mode "$mode_system"
 
 bindsym $mod1+r mode "resize"
 
+# Configure workspaces for mutiple monitors
 workspace 1 output VGA-1
-workspace 9 output LVDS-1
+
+# Turn off laptop monitor
+exec xrandr --output LVDS-1 --off
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
