--- a/Debian i3 config/config
+++ b/Debian i3 config/config
@@ -117,6 +117,9 @@ exec discord --start-minimized
 # unclutter
 exec unclutter &
 
+# lxqt-powermanagement
+exec lxqt-powermanagement
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
