--- a/Debian Laptop/config
+++ b/Debian Laptop/config
@@ -274,6 +274,10 @@ bindsym $mod+Shift+q mode "$mode_system"
 
 bindsym $mod1+r mode "resize"
 
+# Screen brightness controls
+bindsym XF86MonBrightnessUp exec "xbacklight -inc 10"
+bindsym XF86MonBrightnessDown exec "xbacklight -dec 10"
+
 # Configure workspaces for mutiple monitors (most likely want to remove this)
 # workspace 1 output VGA-1
 
