--- a/Debian Weird Computer/config
+++ b/Debian Weird Computer/config
@@ -275,14 +275,8 @@ bindsym $mod+Shift+q mode "$mode_system"
 bindsym $mod1+r mode "resize"
 
 # Screen brightness controls
-# bindsym XF86MonBrightnessUp exec "xbacklight -inc 10"
-# bindsym XF86MonBrightnessDown exec "xbacklight -dec 10"
-
-# Configure workspaces for mutiple monitors (most likely want to remove this)
-# workspace 1 output VGA-1
-
-# Turn off laptop monitor (most likely want to remove this)
-# exec xrandr --output LVDS-1 --off
+bindsym XF86MonBrightnessUp exec "xbacklight -inc 10"
+bindsym XF86MonBrightnessDown exec "xbacklight -dec 10"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
