--- a/Arch Desktop/config
+++ b/Arch Desktop/config
@@ -67,8 +67,8 @@ bindsym $mod1+Tab exec rofi -show window
 # pcmanfm
 bindsym $mod+e exec pcmanfm
 
-# vivaldi
-bindsym $mod+b exec vivaldi-stable
+# web browser
+bindsym $mod+b exec firefox
 
 # flameshot
 bindsym $mod+s exec flameshot gui
