--- a/Arch Desktop/config
+++ b/Arch Desktop/config
@@ -280,6 +280,29 @@ bindsym $mod+Shift+q mode "$mode_system"
         bindsym $mod+r mode "default"
 }
 
+# #0078b2 (dark sky blue)   
+# #6500bd (dark purple)
+
+# class                 border  backgr. text    indicator child_border
+client.focused          #0078b2 #6500bd #ffffff #2e9ef4   #285577
+client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+client.urgent           #2f343a #900000 #ffffff #900000   #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+
+client.background       #ffffff
+
+## defaults
+
+# class                 border  backgr. text    indicator child_border
+#client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
+#client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+#client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+#client.urgent           #2f343a #900000 #ffffff #900000   #900000
+#client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+
+#client.background       #ffffff
+
 bindsym $mod1+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
