--- a/Arch Desktop/config
+++ b/Arch Desktop/config
@@ -50,78 +50,59 @@ bindsym $mod+f fullscreen toggle
 # open i3 config file
 bindsym $mod+i exec leafpad ~/.config/i3/config
 
+#-----------------------------------------------
 ## Start Application
-
 # terminal
 bindsym $mod+Return exec terminator
-
 # dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
-
 # rofi run
 bindsym $mod+r exec rofi -show run
-
 # rofi window
 bindsym $mod1+Tab exec rofi -show window	
-
 # pcmanfm
 bindsym $mod+e exec pcmanfm
-
 # web browser
 bindsym $mod+b exec firefox
-
 # flameshot
 bindsym $mod+s exec flameshot gui
-
 # pavucontrol
 bindsym $mod+v exec pavucontrol
-
 # calender
 bindsym $mod+c exec gsimplecal
-
 # screenshot
 bindsym Print exec --no-startup-id i3-scrot
+#______________________________________________
 
+#---------------------------------------------------------------
 ## Autostart Applications
-
 # redshift
 exec redshift-gtk
-
 # nitrogen
 exec nitrogen --restore &
-
 # corsair driver program
 exec ckb-next -b
-
 # pulseaudio tray
 #exec volumeicon
-
 # synapse
 exec synapse -s
-
 # network manager applet
 exec nm-applet
-
 # udiskie
 exec udiskie
-
 # gnome polkit
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-
 # lxsession polkit
 #exec /usr/bin/lxpolkit
-
 # xscreensaver
 exec xscreensaver -nosplash
-
 # discord 
 exec discord --start-minimized
-
 # unclutter
 exec unclutter &
+#_______________________________________________________________
 
 ## Rules
-
 # enable floating mode for all virtualbox windows
 for_window [class="VirtualBox"] floating enable
 
@@ -235,6 +216,7 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 #bindsym $mod+Shift+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
+#---------------------------------------------------------------------------------------------------------
 # Set shut down, restart and locking features
 set $Locker i3lock && sleep 1
 
@@ -254,7 +236,9 @@ mode "$mode_system" {
 }
 
 bindsym $mod+Shift+q mode "$mode_system"
+#__________________________________________________________________________________________________________
 
+#---------------------------------------------------------------------
 # resize window (you can also use the mouse for that)
  mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -280,9 +264,11 @@ bindsym $mod+Shift+q mode "$mode_system"
         bindsym $mod+r mode "default"
 }
 
-# #0078b2 (dark sky blue)   
-# #6500bd (dark purple)
+bindsym $mod1+r mode "resize"
+#______________________________________________________________________
 
+#-----------------------------------------------------------------------------
+## Cutomize i3 colors
 # class                 border  backgr. text    indicator child_border
 client.focused          #0078b2 #6500bd #ffffff #2e9ef4   #285577
 client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
@@ -292,8 +278,12 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 client.background       #ffffff
 
+# #0078b2 (dark sky blue)   
+# #6500bd (dark purple)
+#_____________________________________________________________________________
+
+#-------------------------------------------------------------------------
 ## defaults
-#----------------------------------------------------------------------
 # class                 border  backgr. text    indicator child_border
 #client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
 #client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
@@ -302,10 +292,9 @@ client.background       #ffffff
 #client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 #client.background       #ffffff
-#----------------------------------------------------------------------
+#_________________________________________________________________________
 
-bindsym $mod1+r mode "resize"
-
+#------------------------------------------------------------------------------
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 #bar {
@@ -315,6 +304,7 @@ bindsym $mod1+r mode "resize"
 	#position bottom
 	#font pango:Sans Regular 16
 #}
+#_____________________________________________________________________________
 
 #Polybar 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
