--- a/Arch Desktop/config
+++ b/Arch Desktop/config
@@ -14,7 +14,20 @@ set $mod1 Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 10
+
+#---------------------------------------------------------------------
+# Fromat: font pango:<family list> [<style options>] <size>
+#example: font pango:DejaVu Sans Mono, Terminus Bold Semi-Condensed 11
+font pango:FreeMono, Bold 12
+
+##default font setting
+#font pango:monospace 10
+
+##Linux Fonts
+#FreeMono
+#FreeSerif
+#FreeSans
+#_____________________________________________________________________
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
