--- a/Arch Desktop/config
+++ b/Arch Desktop/config
@@ -283,7 +283,7 @@ bindsym $mod1+r mode "resize"
 #-----------------------------------------------------------------------------
 ## Cutomize i3 colors
 # class                 border  backgr. text    indicator child_border
-client.focused          #0078b2 #6500bd #ffffff #2e9ef4   #285577
+client.focused          #0088db #005f98 #ffffff #2e9ef4   #285577
 client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
 client.unfocused        #333333 #222222 #888888 #292d2e   #222222
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
@@ -292,7 +292,8 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 client.background       #ffffff
 
 # #0078b2 (dark sky blue)   
-# #6500bd (dark purple)
+# #005f98 (dark sky blue 2)
+# #0088db (light dark sky blue 2) 
 #_____________________________________________________________________________
 
 #-------------------------------------------------------------------------
