--- a/Arch Desktop/config
+++ b/Arch Desktop/config
@@ -15,10 +15,10 @@ set $mod1 Mod1
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 
-#---------------------------------------------------------------------
+#-------------------------------------------------------------------------------
 # Fromat: font pango:<family list> [<style options>] <size>
 #example: font pango:DejaVu Sans Mono, Terminus Bold Semi-Condensed 11
-font pango:FreeMono, Bold 12
+font pango: DejaVuSansMono, Bold 11
 
 ##default font setting
 #font pango:monospace 10
@@ -27,11 +27,13 @@ font pango:FreeMono, Bold 12
 #FreeMono
 #FreeSerif
 #FreeSans
-#_____________________________________________________________________
+#DejaVuSans
+#DejaVuSansMono
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 6
+#_______________________________________________________________________________
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
