--- a/Arch Desktop/config
+++ b/Arch Desktop/config
@@ -68,7 +68,7 @@ bindsym $mod+i exec leafpad ~/.config/i3/config
 #-----------------------------------------------
 ## Start Application
 # terminal
-bindsym $mod+Return exec terminator
+bindsym $mod+Return exec lxterminal
 # dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
 # rofi run
