--- a/Arch Linux/config
+++ b/Arch Linux/config
@@ -112,6 +112,8 @@ exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec discord --start-minimized
 # unclutter
 exec unclutter &
+# volumeicon
+exec volumeicon
 #_______________________________________________________________
 
 ## Rules
@@ -310,14 +312,14 @@ client.background       #ffffff
 #------------------------------------------------------------------------------
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-#bar {
-	#i3bar_command i3bar
-        #status_command i3status
-	##status_command i3blocks
-	#position bottom
-	#font pango:Sans Regular 16
-#}
+bar {
+	i3bar_command i3bar
+        status_command i3status
+	#status_command i3blocks
+	position bottom
+	font pango:Sans Regular 16
+}
 #_____________________________________________________________________________
 
 #Polybar 
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+#exec_always --no-startup-id $HOME/.config/polybar/launch.sh
