--- a/Arch Linux/config
+++ b/Arch Linux/config
@@ -322,5 +322,11 @@ bar {
 }
 #_____________________________________________________________________________
 
+#-----------------------------------------------------------------------------
+# Screen brightness controls
+bindsym XF86MonBrightnessUp exec "xbacklight -inc 10"
+bindsym XF86MonBrightnessDown exec "xbacklight -dec 10"
+#_____________________________________________________________________________
+
 #Polybar 
 #exec_always --no-startup-id $HOME/.config/polybar/launch.sh
