--- a/Arch Linux/config
+++ b/Arch Linux/config
@@ -324,8 +324,8 @@ bar {
 
 #-----------------------------------------------------------------------------
 # Screen brightness controls
-bindsym XF86MonBrightnessUp exec "xbacklight -inc 10"
-bindsym XF86MonBrightnessDown exec "xbacklight -dec 10"
+#bindsym XF86MonBrightnessUp exec "xbacklight -inc 10"
+#bindsym XF86MonBrightnessDown exec "xbacklight -dec 10"
 #_____________________________________________________________________________
 
 #Polybar 
