--- a/Arch Linux/config
+++ b/Arch Linux/config
@@ -63,17 +63,17 @@ bindsym $mod+shift+x kill
 bindsym $mod+f fullscreen toggle
 
 # open i3 config file
-bindsym $mod+i exec leafpad ~/.config/i3/config
+bindsym $mod+i exec alacritty -e vim ~/.config/i3/config
 
 #-----------------------------------------------
 ## Start Application
 # terminal
-bindsym $mod+Return exec lxterminal
+bindsym $mod+Return exec alacritty
+#bindsym $mod+Return exec lxterminal
 # dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
 # rofi run prompt
-bindsym $mod+r exec rofi -combi-modi drun -show combi -show-icons
-#bindsym $mod+r exec rofi -show run
+bindsym $mod+r exec rofi -show run
 # rofi window
 bindsym $mod1+Tab exec rofi -show window	
 # pcmanfm
@@ -94,13 +94,9 @@ bindsym Print exec --no-startup-id i3-scrot
 #---------------------------------------------------------------
 ## Autostart Applications
 # redshift
-exec redshift-gtk
+exec redshift
 # nitrogen
 exec nitrogen --restore &
-# corsair driver program
-exec ckb-next -b
-# pulseaudio tray
-#exec volumeicon
 # volumeicon
 exec volumeicon
 # network manager applet
@@ -320,12 +316,6 @@ bar {
 	position bottom
 	font pango:Sans Regular 16
 }
-#_____________________________________________________________________________
-
-#-----------------------------------------------------------------------------
-# Screen brightness controls
-#bindsym XF86MonBrightnessUp exec "xbacklight -inc 10"
-#bindsym XF86MonBrightnessDown exec "xbacklight -dec 10"
 #_____________________________________________________________________________
 
 #Polybar 
