--- a/Arch Linux/config
+++ b/Arch Linux/config
@@ -218,7 +218,8 @@ bindsym $mod+Ctrl+Left workspace prev
 bindsym $mod+Ctrl+Right workspace next
 
 # Set workspace layout
-workspace_layout tabbed
+## workspace_layout default|stacking|tabbed
+workspace_layout default 
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
